--- a/src/Styles/app.css
+++ b/src/Styles/app.css
@@ -1,3 +1,4 @@
+
 .menu-links {
   padding-top: 50px;
 }
@@ -22,9 +23,17 @@
   font-size: 14px;
   font-weight: 700;
   line-height: 145%;
-  z-index: 1000;
   position: absolute;
   margin-top: -22px;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.slider-title {
+  text-transform: uppercase;
+  font-size: 24px;
+  font-family: Geometria;
+  letter-spacing: 0.72px;
+  text-align: center;
+  margin-top: 33px;
 }
