--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -1,13 +1,14 @@
 
 $cubic: cubic-bezier(0.4, 0.01, 0.165, 0.99);
-$mukta: 'Geometria', sans-serif;;
+$mukta: 'Geometria', sans-serif;
 
 $menuItems: 15;
 
 body {
     margin: 0;
+    font-family: 'Geometria', sans-serif;
     line-height: 1.4;
-    background: #E1E1E1;
+    // background: #E1E1E1;
 }
 
 .window {
