--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -4,7 +4,7 @@ $mukta: 'Geometria', sans-serif;
 
 $menuItems: 15;
 
-body {
+body p{
     margin: 0;
     font-family: 'Geometria', sans-serif;
     line-height: 1.4;
