--- a/src/Components/SimpleSlider/styles.css
+++ b/src/Components/SimpleSlider/styles.css
@@ -1,6 +1,7 @@
 :root {
     --img-slider-less: calc(455px + 330 * ((100vw - 320px) / (650 - 320)));
     --img-slider-mid: calc(455px + 295 * ((100vw - 430px) / (1080 - 430)));
+    /* --img-slider-mid: calc(455px + 100 * ((100vw - 430px) / (1080 - 430))); */
 
    
   }
@@ -9,7 +10,10 @@
     margin-top: 30px;
 } */
 .card-wrapper p{
-    text-align: center;
+    padding-left: 10px;
+    margin-top: 13px;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 
