--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -245,6 +245,17 @@ body p {
   display: block;
   margin: 50px auto 0;
 }
+@media (max-width: 1440px) {
+  .window {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    border-radius: 0px;
+  }
+  .window .header {
+    position: fixed;
+  }
+}
 @media (max-width: 600px) {
   .window {
     width: 100%;
