--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -188,6 +188,15 @@ body p{
     // }
 
    
+    @media(max-width: 1440px) {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        border-radius: 0px;
+        .header {
+            position: fixed;
+        }
+    }
     @media(max-width: 600px) {
         width: 100%;
         height: 100%;
