--- a/src/Components/AboutUs/about.css
+++ b/src/Components/AboutUs/about.css
@@ -10,11 +10,10 @@
 
 .about-img img {
     
-    /* width: 424px; */
     width: 100%;
-    /* width: calc(100% - 20px); */
-    /* width: calc(300px + 124 * ((100vw - 130px) / (450 - 130))); */
+    
 }
 .about-desc p {
     font-size: 14px;
+    margin-top: 20px;
 }
