--- a/src/Components/CardModal/CardModal.css
+++ b/src/Components/CardModal/CardModal.css
@@ -8,17 +8,27 @@ a {
   width: 100%;
   background: rgba(0, 0, 0, .2);
   backdrop-filter: blur(10px);
-  z-index: 10000;
+  z-index: -1;
+  opacity: 0;
+  visibility: hidden;
+  transition: backdrop-filter 1s ease-in-out;
+  transition: opacity 0.7s ease-out;
+  
 }
 
 .modal__wrapper.open {
   height: 100%;
-  display: block;
+  z-index: 100;
+  /* transition: all 300ms ease-out; */
+  opacity: 1;
+  visibility: visible;
 }
 
 .modal__wrapper.close {
   height: 0;
-  display: none;
+  z-index: -1;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .modal__body {
@@ -35,7 +45,7 @@ a {
 
 .modal__close {
   text-align: right;
-  margin-top: -15px;
+  /* margin-top: -15px; */
   color: rgb(79, 79, 79);
   cursor: pointer;
 }
@@ -78,16 +88,11 @@ legend {
   font-size: 24px;
 }
 
-form {
+.card-mod {
   margin: 15% auto;
   padding: 20px;
-  width: 300px; 
-  background: rgb(238, 174, 202);
-  background: radial-gradient(
-    circle,
-    rgba(238, 174, 202, 1) 0%,
-    rgba(148, 187, 233, 1) 100%
-  );
+  width: 256px; 
+  background:white;
   border-radius: 10px;
   box-shadow: 0 0 30px rgb(85, 61, 86);
 }
@@ -132,3 +137,71 @@ input[type="submit"] {
 .buttons {
   text-align: center;
 }
+
+.card-mod__inner {
+  width: 100%;
+  margin: 0 auto;
+  
+}
+
+.card-mod__inner__img{
+ 
+  width: 100%;
+  border-radius: 10px;
+  margin: 0 auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.card-mod__inner p{
+  font-size: 14px;
+}
+
+.links-wrapper {
+  background: linear-gradient(100.03deg, #e798c6 25.36%, #9c98e6 106.07%);
+  border-radius: 10px;
+}
+
+.links-wrapper__link {
+  width: calc(100% - 20px);
+  margin: 40px auto 0;
+  
+  }
+
+  .link-title {
+    padding-top: 12px;
+    color: white;
+
+  }
+  .links-wrapper {
+    margin: 15px auto;
+  }
+  .links-wrapper:last-child {
+    padding-bottom: 1px;
+  }
+  .links-wrapper__link a{
+  
+      display: flex;
+      align-items: center;
+      justify-content: space-between; 
+      text-align: center;
+      text-decoration: none;
+      padding: 4px 21px;
+      color: #D7699C;
+      background: white;
+      border-radius: 48px;
+      font-size: 14px;
+      font-weight: 700;
+      line-height: 145%;
+    
+  }
+  
+  .arrow {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      left: 17px;
+  }
+  
+ 
