--- a/src/Components/CardModal/CardModal.css
+++ b/src/Components/CardModal/CardModal.css
@@ -11,8 +11,8 @@ a {
   z-index: -1;
   opacity: 0;
   visibility: hidden;
-  transition: backdrop-filter 0.3s ease-in-out;
-  transition: opacity 0.6s ease-out;
+  /* transition: backdrop-filter 0.3s ease-in-out; */
+  transition: opacity 0.3s ease-out;
   
 }
 
