--- a/src/Components/SimpleSlider/slick-theme.css
+++ b/src/Components/SimpleSlider/slick-theme.css
@@ -189,14 +189,15 @@
     text-align: center;
 
     opacity: .25;
-    color: black;
+    color: white;
+    opacity: .85;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 .slick-dots li.slick-active button:before
 {
-    opacity: .75;
+    opacity: .7;
     color: black;
 }
 
@@ -204,23 +205,23 @@
 .slick-dots li button:before
 {
     top: -70px;
-    left: calc(-128px - 88 * ((100vw - 430px) / (650 - 430)));
+    /* left: calc(-128px - 88 * ((100vw - 430px) / (650 - 430))); */
     /* left: -88px; */
     opacity: .85;
 
 }
-    .slick-dots li button:before {
+    /* .slick-dots li button:before {
         opacity: .25;
     color: white;
     opacity: .85;
 
 
-    }
-.slick-dots li.slick-active button:before {
+    } */
+/* .slick-dots li.slick-active button:before {
     color: #959595;
 
 
-}
+} */
 
 
 }
