--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -8,7 +8,8 @@ body p{
     margin: 0;
     font-family: 'Geometria', sans-serif;
     line-height: 1.4;
-    // background: #E1E1E1;
+    font-weight: 500;
+    font-size: 18px;
 }
 
 .window {
@@ -32,6 +33,7 @@ body p{
         overflow: hidden;
         transition: all 0.5s ease-out, background 1s ease-out;
         transition-delay: 0.2s;
+        cursor: pointer;
         z-index: 1;
         .burger-container {
             position: relative;
@@ -175,8 +177,8 @@ body p{
         img {
             width: 100%;
             position: relative;
-            display: block;
-            margin: 50px auto 0;
+            // display: block;
+            // margin: 50px auto 0;
             // &:nth-of-type(2) {
             //     margin: 75px auto;
             // }
@@ -206,4 +208,9 @@ body p{
             position: fixed;
         }
     }
+    // @media(max-width: 600px) {
+    //     .content img {
+    //         display: none;
+    //     }
+    // }
 }
