--- a/src/Components/AboutUs/about.css
+++ b/src/Components/AboutUs/about.css
@@ -3,6 +3,16 @@
    justify-content: space-around;
    flex-wrap: wrap;
 }
+
+.about-title-desc {
+    text-transform: uppercase;
+    /* font-size: 23px; */
+    font-size: calc(23px + 19 * ((100vw - 650px) / (1080 - 650)));
+    font-weight: 500;
+    font-family: Geometria;
+    letter-spacing: 0.72px;
+    display: none;
+}
 .about-img{
     margin: 0 auto;
     width: calc(100% - 20px);
@@ -14,6 +24,34 @@
     
 }
 .about-desc p {
-    font-size: 14px;
-    margin-top: 20px;
+    font-size: calc(14px + 4 * ((100vw - 650px) / (1080 - 650)));
+    margin-top: calc(15px + 12 * ((100vw - 650px) / (1080 - 650)));
+}
+.about-desc p:last-child {
+    display: none;
+}
+
+
+@media (min-width: 650px) {
+    .about-wrapper {
+        flex-wrap: nowrap;
+        margin: auto 15px;
+     }
+     .about-img{
+        flex-basis: 40%;
+    }
+    .about-desc {
+        width: 50%;
+        margin-left: 35px;
+    }
+    .about-title-desc {
+      display: block;
+    }
+    
+  }
+
+@media (min-width: 950px) {
+    .about-desc p:last-child {
+        display: block;
+    }
 }
