--- a/src/Components/Store/styles.css
+++ b/src/Components/Store/styles.css
@@ -46,10 +46,12 @@ margin: 75px auto 0;
     justify-content: flex-end;
     left: 17px;
 }
-
+.store-inner{
+    cursor: pointer;
+}
 .store-inner img{
-    width: calc(310px + 19 * ((100vw - 430px) / (1080 - 430)));
-    height: calc(463px + 62 * ((100vw - 430px) / (1080 - 430)));
+    width: calc(300px + 19 * ((100vw - 430px) / (1080 - 430)));
+    height: calc(457px + 62 * ((100vw - 430px) / (1080 - 430)));
     flex-wrap: nowrap;
     border-radius: 10px;
 }
@@ -61,6 +63,7 @@ margin: 75px auto 0;
 
 .card-title__wrapper p{
     margin: 0 auto 15px;
+    font-size: calc(14px + 4 * ((100vw - 650px) / (1080 - 650)));
 }
 
 
