--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.cdnfonts.com/css/geometria');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -26,3 +27,9 @@ code {
   top: 0px; /* Задайте отрицательное значение, чтобы создать отступ выше якоря */
   visibility: hidden; /* Скрыть якорь, чтобы он не занимал место на странице */
 }
+
+/* @media (min-width: 650px) {
+  body {
+    background-color: #FBFBFB;;
+  }
+} */
