--- a/src/Components/SimpleSlider/styles.css
+++ b/src/Components/SimpleSlider/styles.css
@@ -12,21 +12,21 @@
 .card-wrapper p{
     padding-left: 10px;
     margin-top: 13px;
-    font-size: calc(14px + 4 * ((100vw - 650px) / (1080 - 650)));
-    font-weight: bold;
+    font-size: calc(18px + 4 * ((100vw - 650px) / (1080 - 650)));
+    font-weight: 500;
 }
 
 
 .img-wrapper img{
     width: 95%;
-    height: var(--img-slider-less);
+    /* height: var(--img-slider-less); */
 
     border-radius: 10px;
     margin: 0 auto;
     
 }
 
-@media (min-width: 320px) {
+/* @media (min-width: 320px) {
     .img-wrapper img{
 
         height: var(--img-slider-less);
@@ -37,4 +37,4 @@
 
         height: var(--img-slider-mid);
     }
-}
+} */
