--- a/src/Components/Banner/banner.css
+++ b/src/Components/Banner/banner.css
@@ -7,21 +7,55 @@
   text-align: center;
   /* font-size: 54px; */
   font-size: calc(54px + 21 * ((100vw - 600px) / (840 - 600)));
+  font-weight: 400;
   /* color: linear-gradient(100.03deg, #E798C6 25.36%, #9C98E6 106.07%); */
   margin-top: 45px;
-  background-image: linear-gradient(100.03deg, #e798c6 25.36%, #9c98e6 106.07%);
+  margin-bottom: 20px;
+  background-image: linear-gradient(100.03deg, #f381c3 25.36%, #7c75ef 106.07%);
   text-transform: uppercase;
   background-clip: text;
   -webkit-background-clip: text; /* Для поддержки браузерами на основе WebKit */
   color: transparent;
 }
 
-.banner a {
+.button-top {
+  display: none;
+padding: 10px 41px;
+  background: linear-gradient(100.03deg, #f381c3 25.36%, #7c75ef 106.07%);
+  border-radius: 41px;
+  font-size: 13px;
+  font-size:  calc(14px + 4 * ((100vw - 600px) / (840 - 600)));
+  font-weight: 700;
+  line-height: 145%;
+  position: absolute;
+  /* margin-top: -22px; */
+  left: 50%;
+  top: 20.3%;
+  transform: translateX(-50%);
+  z-index: 10;
+
+}
+
+.button-bottom{
+  padding: 10px 41px;
+  background: linear-gradient(100.03deg, #f381c3 25.36%, #7c75ef 106.07%);
+  border-radius: 41px;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 145%;
+  position: absolute;
+  margin-top: -22px;
+  left: 50%;
+  transform: translateX(-50%);
+  /* top: 21%; */
+  z-index: 10;
+  display: block;
+}
+/* .banner a{
   padding: 10px 41px;
   background: linear-gradient(100.03deg, #e798c6 25.36%, #9c98e6 106.07%);
   border-radius: 41px;
-  font-size: 14px;
-  /* font-size:  calc(14px + 21 * ((100vw - 600px) / (840 - 600))); */
+  font-size: 13px;
   font-weight: 700;
   line-height: 145%;
   position: absolute;
@@ -29,7 +63,7 @@
   top: 100%;
   left: 50%;
   transform: translateX(-50%);
-}
+} */
 
 
 
@@ -38,6 +72,12 @@
 }
 
 @media (min-width: 650px) {
+  .button-top {
+    display: block;
+  }
+  .button-bottom {
+    display: none;
+  }
   .banner {
     flex-direction: column-reverse;
   }
