--- a/src/Styles/app.css
+++ b/src/Styles/app.css
@@ -1,7 +1,17 @@
+ul {
+  list-style-type: none;
+}
+
 a {
   cursor: pointer;
   text-decoration: none;
   color: white;
+}
+.header-logo {
+  display: flex;
+}
+.logo-inner {
+  margin: 10px 5px 0 0;
 }
 .menu-links {
   padding-top: 50px;
@@ -10,9 +20,23 @@ a {
   display: inline;
   padding-right: 20px;
 }
+
+.tele-link {
+  display: flex;
+}
+.tele-link p{
+  margin: auto 15px;
+  font-size: 20px;
+    line-height: 145%;
+    font-weight: 700;
+}
 /* .menu-links a:last-child {
     padding-left: 20px;
 } */
+
+.title-pop {
+  margin-left: 10px;
+}
 
 .title {
   text-transform: uppercase;
