--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -22,6 +22,11 @@ body p{
     overflow: hidden;
     border-radius: 3px;
     background: #FFF;
+    .desc {
+        width: 100%;
+        transition: width 1s ease-in-out;
+        transition: width 1s ease-in-out;
+    }
     .header {
         position: absolute;
         display: block;
@@ -29,7 +34,8 @@ body p{
         left: 0;
         height: 50px;
         width: 100%;
-        background: linear-gradient(100.03deg, #E798C6 25.36%, #9C98E6 106.07%);
+        background: linear-gradient(100.03deg, #f381c3 25.36%, #7c75ef 106.07%);
+        // background: linear-gradient(100.03deg, #E798C6 25.36%, #9C98E6 106.07%);
         overflow: hidden;
         transition: all 0.5s ease-out, background 1s ease-out;
         transition-delay: 0.2s;
@@ -78,8 +84,8 @@ body p{
             height: 50px;
             text-align: center;
             color: #FFF;
-            font-size: 22px;
-            left: 50%;
+            font-size: 18px;
+            left: 46%;
             transform: translateX(-50%);
             &.icon-bag {
                 right: 0;
@@ -123,6 +129,7 @@ body p{
         }
         &.menu-opened {
             height: 100%;
+            // width: auto;
             background-color: #000;
             transition: all 0.3s ease-in, background 0.5s ease-in;
             transition-delay: 0.25s;
@@ -197,6 +204,7 @@ body p{
         border-radius: 0px;
         .header {
             position: fixed;
+            z-index: 100;
         }
     }
     @media(max-width: 600px) {
@@ -206,11 +214,34 @@ body p{
         border-radius: 0px;
         .header {
             position: fixed;
+            // transition: all 0.5s ease-out;
+            // transition: width 1s ease-in-out;
+
         }
     }
-    // @media(max-width: 600px) {
-    //     .content img {
-    //         display: none;
-    //     }
-    // }
+    @media(min-width: 650px) {
+       
+        .header {
+            // transition: all 5s ease-out;
+            // transition: width 5s ease-in-out;
+    
+            // transition: width 1s ease-in-out;
+            transition-delay: 0.6s;
+
+
+            &.menu-opened {
+
+                border-radius: 0px 20px 20px 0px;
+            }
+
+
+        }
+        
+        .desc {
+            width: 45%;
+            transition: width 5s ease-in-out;
+
+
+        }
+    }
 }
