--- a/src/Components/Advantages/advantages.css
+++ b/src/Components/Advantages/advantages.css
@@ -1,39 +1,39 @@
 .advantages-wrapper {
-    margin-bottom: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  margin-bottom: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 .advantages-inner {
-    padding: 75px 38px 0 33px;
-    width: calc(70% - 20px);
-    display: block;
+  padding: 75px 38px 0 33px;
+  width: calc(70% - 20px);
+  display: block;
 }
 .advantages-img {
-  width: 75px;
-  /* height: 56px; */
+  width: 55px;
+  height: 80px;
+  left: 155px;
   position: relative;
   top: -20px;
 }
-.advantages-img img{
+.advantages-img img {
   scale: 1.3;
-  /* width: 100%; */
+  margin: auto;
   display: block;
 }
 .advantages-title {
-  font-size: calc(14px + 4 * ((100vw - 650px) / (1080 - 650)));
-    font-weight: 700;
-    text-transform: uppercase;
+  font-size: calc(14px + 2 * ((100vw - 650px) / (1080 - 650)));
+  font-weight: 700;
+  text-transform: uppercase;
 }
 .advantages-desc {
   font-size: calc(14px + 2 * ((100vw - 650px) / (1080 - 650)));
-    line-height: 150%;
-    
+  line-height: 150%;
 }
 
 .wrapper-img {
   margin-bottom: 10px;
-  display: flex;
+  display: block;
   justify-content: space-between;
   align-items: flex-end;
 }
@@ -41,5 +41,10 @@
 @media (min-width: 622px) {
   .advantages-inner {
     width: 230px;
-}
+  }
+  .advantages-img {
+    width: 106px;
+    height: 83px;
+    left: 120px;
+  }
 }
