--- a/src/Components/Banner/banner.css
+++ b/src/Components/Banner/banner.css
@@ -5,38 +5,33 @@
 .banner-title {
   display: none;
   text-align: center;
-  /* font-size: 54px; */
   font-size: calc(54px + 21 * ((100vw - 600px) / (840 - 600)));
   font-weight: 400;
-  /* color: linear-gradient(100.03deg, #E798C6 25.36%, #9C98E6 106.07%); */
-  margin-top: 45px;
-  margin-bottom: 20px;
+  margin-top: 75px;
+  margin-bottom: 40px;
   background-image: linear-gradient(100.03deg, #f381c3 25.36%, #7c75ef 106.07%);
   text-transform: uppercase;
   background-clip: text;
-  -webkit-background-clip: text; /* Для поддержки браузерами на основе WebKit */
+  -webkit-background-clip: text;
   color: transparent;
 }
 
 .button-top {
   display: none;
-padding: 10px 41px;
+  padding: 10px 41px;
   background: linear-gradient(100.03deg, #f381c3 25.36%, #7c75ef 106.07%);
   border-radius: 41px;
   font-size: 13px;
-  font-size:  calc(14px + 4 * ((100vw - 600px) / (840 - 600)));
-  font-weight: 700;
+  font-size: calc(13px + 4 * ((100vw - 600px) / (840 - 600)));
   line-height: 145%;
   position: absolute;
-  /* margin-top: -22px; */
   left: 50%;
-  top: 20.3%;
+  top: 22.3%;
   transform: translateX(-50%);
   z-index: 10;
-
 }
 
-.button-bottom{
+.button-bottom {
   padding: 10px 41px;
   background: linear-gradient(100.03deg, #f381c3 25.36%, #7c75ef 106.07%);
   border-radius: 41px;
@@ -47,29 +42,29 @@ padding: 10px 41px;
   margin-top: -22px;
   left: 50%;
   transform: translateX(-50%);
-  /* top: 21%; */
   z-index: 10;
   display: block;
 }
-/* .banner a{
-  padding: 10px 41px;
-  background: linear-gradient(100.03deg, #e798c6 25.36%, #9c98e6 106.07%);
-  border-radius: 41px;
-  font-size: 13px;
-  font-weight: 700;
-  line-height: 145%;
-  position: absolute;
-  margin-top: -22px;
-  top: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-} */
-
-
 
 .desk-img {
   display: none;
 }
+
+@media (max-width: 1180px) {
+  .button-top {
+    top: 23.3%;
+  
+  }}
+@media (max-width: 850px) {
+  .button-top {
+    top: 24.3%;
+  
+  }}
+@media (max-width: 650px) {
+  .button-top {
+    top: 22.3%;
+  
+  }}
 
 @media (min-width: 650px) {
   .button-top {
