--- a/src/Styles/app.css
+++ b/src/Styles/app.css
@@ -10,9 +10,7 @@ a {
 .header-logo {
   display: flex;
 }
-.logo-inner {
-  margin: 10px 5px 0 0;
-}
+
 .menu-links {
   padding-top: 50px;
 }
@@ -30,9 +28,6 @@ a {
     line-height: 145%;
     font-weight: 700;
 }
-/* .menu-links a:last-child {
-    padding-left: 20px;
-} */
 
 .title-pop {
   margin-left: 10px;
@@ -40,7 +35,6 @@ a {
 
 .title {
   text-transform: uppercase;
-  /* font-size: 24px; */
   font-size: calc(24px + 26 * ((100vw - 320px) / (1080 - 320)));
   font-weight: 400;
   font-family: Geometria;
@@ -49,7 +43,6 @@ a {
 }
 .about-title-mob{
   text-transform: uppercase;
-  /* font-size: 24px; */
   font-size: calc(24px + 26 * ((100vw - 320px) / (1080 - 320)));
   font-weight: 400;
   font-family: Geometria;
@@ -64,5 +57,11 @@ a {
 @media (min-width: 650px) {
   .about-title-mob {
     display: none;
+  }
+}
+@media (max-width: 650px) {
+  
+  .title:first-child {
+    text-align: center;
   }
 }
