--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -18,7 +18,7 @@ body p {
   background: #fff;
 }
 .window .desc {
-  width: 100%;
+  width: 16%;
   transition: width 1s ease-in-out;
   transition: width 1s ease-in-out;
 }
@@ -82,8 +82,8 @@ body p {
   text-align: center;
   color: #fff;
   font-size: 18px;
-  left: 46%;
-  transform: translateX(-50%);
+  right: 15%;
+  transform: translateX(-67%);
 }
 .window .header .icon.icon-bag {
   right: 0;
@@ -96,7 +96,7 @@ body p {
 .window .header ul.menu {
   position: relative;
   display: block;
-  padding: 0px 25px 0;
+  padding: 0;
   list-style: none;
 }
 .window .header ul.menu li.menu-item {
@@ -262,17 +262,6 @@ body p {
     z-index: 100;
   }
 }
-@media (max-width: 600px) {
-  .window {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    border-radius: 0px;
-  }
-  .window .header {
-    position: fixed;
-  }
-}
 @media (min-width: 650px) {
   .window .header {
     transition-delay: 0.6s;
@@ -280,8 +269,12 @@ body p {
   .window .header.menu-opened {
     border-radius: 0px 20px 20px 0px;
   }
+  .window .header .icon {
+    left: 46%;
+    transform: translateX(0);
+  }
   .window .desc {
-    width: 45%;
+    width: 300px;
     transition: width 5s ease-in-out;
   }
 }/*# sourceMappingURL=style.css.map */
